[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.coverage.report]
exclude_lines = [
  "@(abc\\.)?abstractmethod",
  "class .*Protocol\\):",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if typing.TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.coverage.run]
include = ["bin/*", "lib/*"]

[tool.isort]
known_first_party = ["bin", "lib", "tests"]
line_length = 120
profile = "black"
py_version = 312

[tool.poetry]
authors = ["ovsds <github@ovsds.ru>"]
description = "Github Watcher Backend"
name = "github-watcher"
version = "0.0.1"

[tool.poetry.dependencies]
aiofile = "^3.8.8"
aiohttp = "^3.9.3"
aiojobs = "^1.2.1"
cron-converter = "^1.1.0"
gql = {extras = ["aiohttp"], version = "^3.5.0"}
graphql-core = "^3.2.3"
orjson = "^3.10.13"
pydantic = "^2.11.7"
pydantic-settings = {extras = ["yaml"], version = "^2.7.1"}
python = "~3.12"
pyyaml = "^6.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
deptry = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
ruff = "*"
sort-all = "*"
toml-sort = "*"

[tool.pyright]
exclude = [
  "**/__pycache__",
]
include = [
  "bin",
  "lib",
  "tests",
]
pythonPlatform = "All"
pythonVersion = "3.12"
reportConstantRedefinition = "none"
reportMissingTypeStubs = "none"
reportPrivateUsage = "information"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnknownMemberType = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUntypedFunctionDecorator = "warning"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
venv = ".venv"
venvPath = '.'

[tool.pytest.ini_options]
log_cli = true
log_level = "WARNING"
pythonpath = "."

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "I", # isort
  "UP", # pyupgrade
]
ignore = [
  "F403", # 'from modle import *' used; unable to detect undefined names
  "F405", # 'from module import *' used; unable to detect undefined names
]

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
trailing_comma_inline_array = true
